--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "jquery": "^3.4.1",
-    "morgan": "~1.9.1",
-    "popper.js": "^1.15.0"
+    "morgan": "~1.9.1"
   }
 }
