--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www.js"
+    "start": "nodemon ./bin/www.js",
+    "lint": "standard --fix"
   },
   "dependencies": {
     "check-ip-address": "^1.1.3",
@@ -12,6 +13,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "redis": "^2.8.0"
+    "nodemon": "^1.19.2",
+    "redis": "^2.8.0",
+    "standard": "^14.1.0"
   }
 }
